--- a/.github/workflows/staging-client.yml
+++ b/.github/workflows/staging-client.yml
@@ -1,5 +1,5 @@
-# .github/workflows/staging-server.yml
-name: Compile and push server image
+# .github/workflows/staging-client.yml
+name: Compile and push client image
 
 # Controls when the workflow will run
 on:
@@ -38,7 +38,7 @@ jobs:
       - uses: docker/build-push-action@v2
         name: Build and push
         with:
-          context: ./server
-          file: ./server/Dockerfile
+          context: ./client
+          file: ./client/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_SERVER_IMAGE_NAME }}:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_CLIENT_IMAGE_NAME }}:latest
